Correct flex-direction and add flex-wrap properties
Fix typo in flex-direction and add flex-wrap.

--- a/style.css
+++ b/style.css
@@ -9,6 +9,8 @@
   width: 100%;
   text-align: center;
   display: flex;
+  flex-derection: rom;
+  flex-wrap: wrap;
 }
 .kontainer ul{
   display: flex;
